SyntacticAnalyzer/tests/fail/atributo-ctor-metodo02.java
class foo {

	var int n1;
	
	ctor1 (int j) {
	}
	
	static Objeto method1(char c1, char c2, int n1)
	var int n2, n3, n4;
	var char c1, c2;
	String cadena; // falta var
	var Objeto o1;
	{
	
	}

	ctor2 (int n1, char c1){
	}
	
	var char caracter;
	
	static void method2(){
	}
	
	dynamic Objeto method3(){
	}
	
}
